--- a/prepara_pedido.html
+++ b/prepara_pedido.html
@@ -26,6 +26,7 @@
                 <option value="value1">pequeña</option>
                 <option value="value2" selected>mediana</option>
                 <option value="value3">grande</option>
+                <option value="value3">XXL</option>
               </select>
               <br>
               <label><input type="checkbox" id="cbox1" value="first_checkbox"> Jamón York</label><br>
