--- a/solicita_pedido.html
+++ b/solicita_pedido.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="images/logo.png" alt="" width="40px" height="auto"><br>
+    <img src="images/logo.png" alt="" width="40" ><br>
     <h1  style="background-color: rgb(248, 198, 124); color: gray; width: 40%; text-align:center; margin:auto;border-radius: 10px 10px 0  0; ">Pizzas
         Full Stack</h1>
         <p  style="background-color: rgb(248, 198, 124); color: gray; width: 40%; text-align:center; margin:auto">se ha solicitado el pedido correctamente</p>
