--- a/prepara_pedido.html
+++ b/prepara_pedido.html
@@ -8,20 +8,20 @@
     
 </head>
 <body>
-    <img src="images/logo.png" alt="" width="40px" height="auto"><br>
+    <img src="images/logo.png" alt="" width="40"><br>
     <h1  style="background-color: rgb(248, 198, 124); color: gray; width: 40%; text-align:center; margin:auto;border-radius: 10px 10px 0  0; ">Pizzas
         Full Stack</h1>
 
         <form action="solicita_pedido.html" method="post" style="background-color: blanchedalmond; color: gray; width: 40%; text-align:center; margin:auto;border-radius: 0  0 10px 10px; padding-bottom: 50px;">
             <br>
-            <label for="" style="margin-top: 30px;">Nombre del cliente</label> <br><input type="text" name="" id="" style="margin: 10px;">
-            <br><label for="">Apellidos del cliente</label> <br><input type="text" name="" id="" style="margin: 10px;">
-            <br><label for="">Fecha</label> <br><input type="date" name="" id=""style="margin: 10px;">
-            <br><label for="">Número</label> <br><input type="number" name="" id="" style="margin: 10px;">
-            <br><label for="">Dirreción</label> <br><input type="text" name="" id="" style="margin: 10px; margin-bottom: 50px;">
+            <label   style="margin-top: 30px;">Nombre del cliente</label> <br><input type="text"   style="margin: 10px;">
+            <br><label  >Apellidos del cliente</label> <br><input type="text"   style="margin: 10px;">
+            <br><label  >Fecha</label> <br><input type="date"  style="margin: 10px;">
+            <br><label  >Número</label> <br><input type="number"   style="margin: 10px;">
+            <br><label  >Dirreción</label> <br><input type="text"   style="margin: 10px; margin-bottom: 50px;">
             <br>
             <h2  style="background-color: rgb(248, 198, 124); color: gray;text-align:center; margin:auto; ">Datos del pedido</h2>
-            <br><label for="">tamaño</label><br>
+            <br><label  >tamaño</label><br>
             <select name="select" style="margin: 20px;">
                 <option value="value1">pequeña</option>
                 <option value="value2" selected>mediana</option>
