--- a/prepara_pedido.html
+++ b/prepara_pedido.html
@@ -31,12 +31,12 @@
               <br>
               <label><input type="checkbox" id="cbox1" value="first_checkbox"> Jamón York</label><br>
 
-                <input type="checkbox" id="cbox2" value="second_checkbox"> <label for="cbox2">Champiñones</label>
+                <input type="checkbox"   value="second_checkbox"> <label for="cbox2">Champiñones</label>
                 <br>
-                <input type="checkbox" id="cbox2" value="second_checkbox"> <label for="cbox2">Pepperoni.
+                <input type="checkbox"   value="second_checkbox"> <label for="cbox2">Pepperoni.
                 </label>
                 <br>
-                <input type="checkbox" id="cbox2" value="second_checkbox"> <label for="cbox2">Aceitunas.
+                <input type="checkbox"   value="second_checkbox"> <label for="cbox2">Aceitunas.
                 </label>
                 <br>
             <input type="submit" value="Enviar" style="margin: 20px;">
@@ -44,8 +44,6 @@
         </form >
 
   
-        <style>
-
-        </style>
+ 
 </body>
 </html>
