--- a/prepara_pedido.html
+++ b/prepara_pedido.html
@@ -31,12 +31,12 @@
               <br>
               <label><input type="checkbox" id="cbox1" value="first_checkbox"> Jamón York</label><br>
 
-                <input type="checkbox"   value="second_checkbox"> <label for="cbox2">Champiñones</label>
+                <input type="checkbox"   value="second_checkbox"> <label>Champiñones</label>
                 <br>
-                <input type="checkbox"   value="second_checkbox"> <label for="cbox2">Pepperoni.
+                <input type="checkbox"   value="second_checkbox"> <label >Pepperoni.
                 </label>
                 <br>
-                <input type="checkbox"   value="second_checkbox"> <label for="cbox2">Aceitunas.
+                <input type="checkbox"   value="second_checkbox"> <label>Aceitunas.
                 </label>
                 <br>
             <input type="submit" value="Enviar" style="margin: 20px;">
